# QuantResearch

./: README.md
AI using Pacman/00 Python Primer/: How to install the PyDev plug-in for Eclipse.doc  Python Refresher Code.doc  Python Refresher.doc
AI using Pacman/01 Lecture Slides/: Thumbs.db
Algorithmic Differentiation/: SimpleSwapAD.cpp  SwapAD.cpp  Tangents&Adjoints.cpp
Bloomberg/: Bloomberg IR Pages.docx
Bond vs Swap/: Bond vs Swap.xlsx
Bonds/BondCurveFittingExcelExamples/: Nelosn Siegel Svensson bond curve BB.xls  Nelosn Siegel bond curve BB.xls
CDS Date Conventions/: CDS_Bloomberg.docx
CDS ISDA Standard Model/isda_cds_model_c_v1.8.3/: README.txt  cds_v1.8.3.xll  cds_v1.8.3_x64.xll  license.txt
CMake Examples/: README.txt
CMake Examples/MathLibrary/: CMakeLists.txt
CMake Examples/MathLibraryAdvanced/: CMakeLists.txt
CMake Examples/MathLibraryAdvanced/Addition/: CMakeLists.txt
CMake Examples/MathLibraryAdvanced/Analytics/: CMakeLists.txt
CMake Examples/MathLibraryAdvanced/Subtraction/: CMakeLists.txt
Coco Bonds/: CoCoBonds.py  CoCo_Bonds.py  CocoBonds.ipynb
Credit Curve/: CreditCurve.xlsm  CreditDefaultSwap.xlsx
Deep Learning Risk/: deep_learning_risk.py
First-to-Default CDS/: FirstToDefaultCDS.xlsm
Fractional Brownian Motion/: FractionalGBM.xlsx
IB Python API/: AccountSummary.ipynb  Connect.ipynb  IB Python API.pptx  MarketData.ipynb  OrderManagement.ipynb
Monotone Cubic Hermite/: hermite.cpp  hermite.hpp  hermite_cubic.cpp  hermite_cubic.hpp  hermite_cubic_test.cpp  hermite_test.cpp
Monotone Cubic Hermite Spline/: KSpline.h  README.txt
Monte Carlo Pricing & Risk/: Air Bag Option - MC simulation.xls  Amortizing Option Pricing.xls  BSM values and Greek letters in closed form.xls  Basket Asian Rainbow Call Structure - 1.0.xls  Basket Option Pricing - Closed Form & MC Simulation.xls  Basket Option Pricing - Closed Form (Pseudo Vanilla).xls  Best of Two Assets - Monte Carlo Simulation Pricing.xls  Best of Two Assets - Monte Carlo Simulation.xls  Black Scholes Model - VBA Implementation.xls  Black-Scholes (Fundamentals) - 1.1.xls  Black-Scholes Option Pricing - 1.xls  Black-Scholes Option Pricing - Class Tutorial.xls  Black-Scholes with Fitted Volatilities - 1.0.xls  CRR Binomial Tree - Nicholas Burgess.xls  Cap Pricing using CIR in Monte Carlo.xls  Caps & Floors (Using CIR).xls  Cholesky & Correlated Random Numbers.xls  Cholesky Decomposition.xls  Cholesky VBA Code.xls  Class Tutorial 1 (Brownian Motion on a Spreadsheet).xls  Class Tutorial 2 (Brownian Motion on a Spreadsheet).xls  Class Tutorial 3 (Vanilla Option Pricing using Monte Carlo).xls  Class Tutorial 4 (Exotic Option Pricing using Monte Carlo).xls  Class Tutorial 5 (CRR Tree, etc.).xls  Class Tutorial 6 (Convertible Bond using CRR).xls  Class Tutorial 7 (Multi-asset Options and Products).xls  Copy of PolynomialRegression Sep02A.xls  Digital (Binary) Option Pricing - Monte Carlo Simulation.xls  Eigensystem & Cholesky - 1.xls  Eigensystem & Cholesky - Nicholas Burgess.xls  Eigensystem - 1.0.xls  Excel Formulas & Applications - E1.xls  Excel Formulas & Applications - E2.xls  Excel Formulas & Applications - E3.xls  Excel Formulas & Applications - E4.xls  Excel Formulas & Applications - E5.xls  Excel Formulas & Applications - E6 (Regression Analysis).xls  Exotic Option - Monte Carlo in VBA.xls  Exotic Option Pricing Sheet - 1.0.xls  FXRangeAccumulator.xls  (+35 more)
Monte Carlo QMC BB/: MonteCarlo.py
NL2SOL Solver/: FitPolynomial.xlsx  Makefile  NL2SOL.rc  NL2SOL.sln  NL2SOL.vcxproj  XLCall.h  XLFunctions.cpp  XLFunctions.h  XLOper.cpp  XLOper.h  dllmain.cpp  dllmain.h  fit_polynomial.cpp  nl2sol.cpp  nl2sol.h  version.h
NL2SOL Solver/Win32/: NL2SOL.xll
PCA Statistical Arbitrage/: pairs_test.ipynb  pca_for_statistical_arbitrage.ipynb
Pairs Trading/: PairsTrading.py
Quanto CDS/: Quanto CDS Pricing, Theory & Practice.pptx  Quanto CDS.xlsx  QuantoCDS.py
Rough Volatility/: QM2024-1 Econometrics.ipynb  QM2024-2 Rough volatility models.ipynb  QM2024-3 Affine models.ipynb  QM2024-4 Computation.ipynb  README.md
Rough Volatility/QRV/: HQE.R  (+17 more)
Sobol Sequences & GBM/: GBM using Sobol.py
(+500 files in other folders)
